--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,25 @@ dependencies:
   flutter:
     sdk: flutter
 
+  connectivity_plus: ^2.3.2
+  dartz: ^0.10.1
+  equatable: ^2.0.3  
+  flutter_bloc: ^8.0.1
+  flutter_hooks: ^0.18.4
+  get_it: ^7.2.0
+  google_fonts: ^3.0.1
+  injectable: ^1.5.3
+  intl: ^0.17.0
+  logging: ^1.0.2
+  package_info_plus: ^1.4.2
+  shared_preferences: ^2.0.15
+
+  retrofit: ^3.0.1+1
+  dio: ^4.0.4
+  logger: ^1.1.0
+  freezed_annotation: ^1.1.0
+  json_annotation: ^4.4.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +57,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner:
+  injectable_generator:
+  retrofit_generator:
+  freezed: ^1.1.1
+  json_serializable: ^6.1.4
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
